--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Chord Generator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Generate a list of chord voicings for a given tuning">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
